added start to package.json

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "the-geo-effect",
   "version": "1.0.0",
+  "start":"node app.js",
   "description": "Climate change awareness webpage",
   "main": "app.js",
   "scripts": {
