--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "url": "https://github.com/shreyabarua/FinalProject/issues"
   },
   "homepage": "https://github.com/shreyabarua/FinalProject#readme",
-
+  "engines": {
+    "node": "7.4.x",
+  },
   "dependencies": {
     "bootstrap": "^3.3.7",
     "body-parser": "^1.17.2",
@@ -26,10 +28,4 @@
     "hbs": "^4.0.1",
     "mongoose": "^4.11.8"
   }
-}
-
-{
-  "engines": {
-    "node": "7.4.0",
-  },
 }
