--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "body-parser": "^1.17.2",
     "express": "^4.15.4",
     "hbs": "^4.0.1",
+    "mongodb": "^2.1.6",
     "mongoose": "^4.11.8"
   }
 }
